add is0 as settable switch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,10 +65,10 @@ if(${SWITCH} MATCHES "meshcap")
   else()
     string(APPEND switches " OMPG OMPH")
   endif()
-  if(WAVEICE)
-   string(APPEND switches " IC4")
+  if(WAVICE)
+   string(APPEND switches " IC4 IS0")
   else()
-   string(APPEND switches " IC0")
+   string(APPEND switches " IC0 IS0")
   endif()
   file(WRITE ${CMAKE_BINARY_DIR}/switch ${switches})
 endif()
